sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:10: error: not found: value test2
    test2 = 0
    ^